--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.1",
+    "hoek": "^4.2.1",
     "jquery": "^3.3.1"
   },
   "keywords": [],
